syntax = "proto3";

package worker;
option go_package = "proto/worker";

service WorkerService {
    // Send a task to the worker server
    rpc DoWork(WorkRequest) returns (WorkResponse) {}
}

message WorkRequest {
    string task_data = 1;
}

message WorkResponse {
    bool success = 1;
    string result = 2;
}
